--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -25,7 +25,7 @@ jobs:
     # Formatting and linting only runs on human-submitted PRs
     format-lint-lwc-tests:
         if: github.actor != 'trailheadapps-bot'
-        runs-on: trailheadapps-Ubuntu
+        runs-on: ubuntu-latest
         steps:
             # Checkout the source code
             - name: 'Checkout source code'
@@ -65,7 +65,7 @@ jobs:
 
    
     scratch-org-test:
-        runs-on: trailheadapps-Ubuntu
+        runs-on: ubuntu-latest
         needs: format-lint-lwc-tests
         if: github.actor != 'dependabot[bot]'
         steps:
@@ -134,7 +134,7 @@ jobs:
               run: sf org delete scratch -p -o scratch-org
 
     trigger-packaging:
-        runs-on: trailheadapps-Ubuntu
+        runs-on: ubuntu-latest
         needs: scratch-org-test
         steps:
             # Checkout the source code
