--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ on:
 # Jobs to be executed
 jobs:
     format-lint-lwc-tests:
-        runs-on: trailheadapps-Ubuntu
+        runs-on: ubuntu-latest
         steps:
             # Checkout the source code
             - name: 'Checkout source code'
@@ -53,7 +53,7 @@ jobs:
               run: npm run test:unit:coverage
 
     scratch-org-test:
-        runs-on: trailheadapps-Ubuntu
+        runs-on: ubuntu-latest
         needs: format-lint-lwc-tests
         if: github.actor != 'dependabot[bot]'
         steps:
@@ -114,7 +114,7 @@ jobs:
               run: sf org delete scratch -p -o scratch-org
 
     trigger-packaging:
-        runs-on: trailheadapps-Ubuntu
+        runs-on: ubuntu-latest
         needs: scratch-org-test
         steps:
             # Checkout the source code
