--- a/.github/workflows/new-issue-welcome.yml
+++ b/.github/workflows/new-issue-welcome.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
     comment:
-        runs-on: trailheadapps-Ubuntu
+        runs-on: ubuntu-latest
         steps:
             - uses: actions/github-script@v6
               with:
