--- a/.github/workflows/packaging-pr.yml
+++ b/.github/workflows/packaging-pr.yml
@@ -15,7 +15,7 @@ env:
 # Jobs to be executed
 jobs:
     release-package-version:
-        runs-on: trailheadapps-Ubuntu
+        runs-on: ubuntu-latest
         steps:
             # Install Salesforce CLI
             - name: 'Install Salesforce CLI'
