--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -35,7 +35,7 @@
       "package": "ESSpaceMgmtLWC",
       "versionName": "ver 0.1",
       "versionNumber": "0.1.0.NEXT",
-      "default": false,
+      "default": true,
       "dependencies": [
         {
           "package": "ESObjects",
